# tests_webapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  Makefile  local.env  pyproject.toml
.github/workflows/: build_push.yaml  coverage.yaml  python-app.yml  realease.yaml  release.yaml  test.yaml
app/: api.py  crud.py  database.py  lifespans.py  main.py  mocks.py  models.py  routers.py  settings.py
tests/: conftest.py
tests/test_apis/: test_health.py  test_score.py
