[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "faker>=38.0.0",
    "fastapi>=0.121.2",
    "orjson>=3.11.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "autoflake>=2.3.1",
    "autoimport>=1.6.1",
    "autopep8>=2.3.2",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pylint>=4.0.2",
    "reorder-python-imports>=3.16.0",
]

tests = [
    "pytest>=9.0.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]



[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "Q", "I001"]
ignore = ["F401"]
exclude = ["**/migrations/*.py"]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
parallel = false
branch = false
source = ["."]
omit = [
    "tests/*",
]

[tool.coverage.html]
title = "Webapp api coverage"
skip_empty = true
skip_covered = true
directory = "coverage/htmlcov"

[tool.coverage.report]
show_missing = true
fail_under = 90
